# btct

./: .gitmodules  meson.build
src/: bip32.c  bip32.h  bip32_command.c  bip39.c  bip39.h  bip39_command.c  bip39_english.h  bip44.c  bip44.h  bip44_coins.h  bip44_command.c  bip85.c  bip85.h  bip85_command.c  btct.c  command.c  command.h  meson.build  sss_command.c  store.c  store.h  store_command.c  utils.c  utils.h
test/: bip32_spec.c  bip39_spec.c  bip85_spec.c  meson.build  test_vectors.h  utils_spec.c
